<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_assets"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
</menu>