<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Authentication -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.imaginit.hyperplux.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.imaginit.hyperplux.SignUpFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main Screens -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.imaginit.hyperplux.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_assetListFragment"
            app:destination="@id/assetListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_marketplaceFragment"
            app:destination="@id/marketplaceFragment" />
        <action
            android:id="@+id/action_homeFragment_to_assetDetailFragment"
            app:destination="@id/assetDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/assetListFragment"
        android:name="com.imaginit.hyperplux.AssetListFragment"
        android:label="@string/my_assets"
        tools:layout="@layout/fragment_asset_list">
        <action
            android:id="@+id/action_assetListFragment_to_addEditAssetFragment"
            app:destination="@id/addEditAssetFragment" />
        <action
            android:id="@+id/action_assetListFragment_to_assetDetailFragment"
            app:destination="@id/assetDetailFragment" />
        <action
            android:id="@+id/action_assetListFragment_to_transactionListFragment"
            app:destination="@id/transactionListFragment" />
    </fragment>

    <fragment
        android:id="@+id/marketplaceFragment"
        android:name="com.imaginit.hyperplux.ui.fragments.MarketplaceFragment"
        android:label="@string/marketplace"
        tools:layout="@layout/fragment_marketplace">
        <action
            android:id="@+id/action_marketplaceFragment_to_assetDetailFragment"
            app:destination="@id/assetDetailFragment" />
        <action
            android:id="@+id/action_marketplaceFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.imaginit.hyperplux.ui.fragments.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_profileFragment_to_willSettingsFragment"
            app:destination="@id/willSettingsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_transactionListFragment"
            app:destination="@id/transactionListFragment" />
    </fragment>

    <!-- Asset Management -->
    <fragment
        android:id="@+id/addEditAssetFragment"
        android:name="com.imaginit.hyperplux.ui.fragments.AddEditAssetFragment"
        android:label="@string/add_asset"
        tools:layout="@layout/fragment_add_edit_asset">
        <argument
            android:name="asset"
            app:argType="com.imaginit.hyperplux.models.Asset"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/assetDetailFragment"
        android:name="com.imaginit.hyperplux.ui.fragments.AssetDetailFragment"
        android:label="@string/asset_details"
        tools:layout="@layout/fragment_asset_detail">
        <argument
            android:name="assetId"
            app:argType="integer" />
        <action
            android:id="@+id/action_assetDetailFragment_to_addEditAssetFragment"
            app:destination="@id/addEditAssetFragment" />
        <action
            android:id="@+id/action_assetDetailFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
        <action
            android:id="@+id/action_assetDetailFragment_to_transactionCreateFragment"
            app:destination="@id/transactionCreateFragment" />
    </fragment>

    <!-- User Management -->
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.imaginit.hyperplux.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.imaginit.hyperplux.UserProfileFragment"
        android:label="@string/view_profile"
        tools:layout="@layout/fragment_user_profile">
        <argument
            android:name="userId"
            app:argType="string" />
        <action
            android:id="@+id/action_userProfileFragment_to_assetDetailFragment"
            app:destination="@id/assetDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/willSettingsFragment"
        android:name="com.imaginit.hyperplux.WillSettingsFragment"
        android:label="@string/will_and_estate"
        tools:layout="@layout/fragment_will_settings" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.imaginit.hyperplux.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Transactions -->
    <fragment
        android:id="@+id/transactionListFragment"
        android:name="com.imaginit.hyperplux.TransactionListFragment"
        android:label="@string/transaction_history"
        tools:layout="@layout/fragment_transaction_list">
        <action
            android:id="@+id/action_transactionListFragment_to_transactionDetailFragment"
            app:destination="@id/transactionDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionDetailFragment"
        android:name="com.imaginit.hyperplux.TransactionDetailFragment"
        android:label="@string/transaction_details"
        tools:layout="@layout/fragment_transaction_detail">
        <argument
            android:name="transactionId"
            app:argType="integer" />
        <action
            android:id="@+id/action_transactionDetailFragment_to_assetDetailFragment"
            app:destination="@id/assetDetailFragment" />
        <action
            android:id="@+id/action_transactionDetailFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionCreateFragment"
        android:name="com.imaginit.hyperplux.TransactionCreateFragment"
        android:label="@string/create_transaction"
        tools:layout="@layout/fragment_transaction_create">
        <argument
            android:name="assetId"
            app:argType="integer" />
        <argument
            android:name="transactionType"
            app:argType="string" />
    </fragment>

</navigation>